Add legal links section to footer with styling adjustments

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -288,6 +288,11 @@ import Modal from "./Modal.astro";
         </a>
       </div>
     </div>
+
+    <div class="legal-links">
+      <a href="/terminosycondiciones">Terminos y condiciones</a>
+      <a href="/politicadeprivacidad">Política de privacidad</a>
+    </div>
   </div>
 </footer>
 <div class="black-line"></div>
