Fix privacy policy link in footer for consistency

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -291,7 +291,7 @@ import Modal from "./Modal.astro";
 
     <div class="legal-links">
       <a href="/terminosycondiciones">Terminos y condiciones</a>
-      <a href="/politicadeprivacidad">Política de privacidad</a>
+      <a href="/politicasdeprivacidad">Política de privacidad</a>
     </div>
   </div>
 </footer>
